# ftaql

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  MAINTENANCE.md  README.md  README.ru.md  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  publish-dry-run.yml  release-checks.yml  release.yml  test.yml  wasm-dry-run.yml
crates/: COUPLING_SCORE.md
crates/ftaql/: Cargo.toml
crates/ftaql-wasm/: Cargo.toml  README.md
crates/ftaql-wasm/src/: lib.rs  lib_tests.rs
crates/ftaql/src/: lib.rs  main.rs  resolve.rs  sqlite.rs
crates/ftaql/src/config/: mod.rs  tests.rs
crates/ftaql/src/coupling/: mod.rs  tests.rs
crates/ftaql/src/cyclo/: mod.rs  tests.rs
crates/ftaql/src/halstead/: mod.rs  tests.rs
crates/ftaql/src/output/snapshots/: ftaql__output__tests__generate_output_csv.snap  ftaql__output__tests__generate_output_table.snap
crates/ftaql/src/parse/: mod.rs  tests.rs
crates/ftaql/src/structs/: mod.rs
crates/ftaql/src/utils/: mod.rs  tests.rs
crates/ftaql/src/walk/: mod.rs
crates/ftaql/tests/: coupling_integration_test.rs  filter_integration_test.rs  runtime_cycles_integration_test.rs  sqlite_integration_test.rs  tsconfig_paths_integration_test.rs
crates/ftaql/tests/fixtures/filter_project/__tests__/: index.test.ts
crates/ftaql/tests/fixtures/filter_project/src/: helper.ts  index.ts
crates/ftaql/tests/fixtures/large_cycle_project/: file0.js  file2.js  file3.js  file4.js  file5.js  file6.js  file7.js  file8.js  file9.js
crates/ftaql/tests/fixtures/runtime_cycles_project/: a.ts  b.ts  c.ts  d.ts
crates/ftaql/tests/fixtures/sample_project/: app.ts  logger.ts  main.ts  tsconfig.json  utils.ts
crates/ftaql/tests/fixtures/sample_project/components/: button.tsx
crates/ftaql/tests/fixtures/snapshots/: coupling_integration_test__app.ts@app.ts.snap  coupling_integration_test__components__button.tsx@components@button.tsx.snap  coupling_integration_test__logger.ts@logger.ts.snap  coupling_integration_test__utils.ts@utils.ts.snap
crates/ftaql/tests/fixtures/sqlite_invalid_import_project/: a.ts  b.ts
crates/ftaql/tests/fixtures/tsconfig_project/: tsconfig.json
crates/ftaql/tests/snapshots/: coupling_integration_test__ordered_cycle_reporting.snap  coupling_integration_test__tsconfig_paths_resolution.snap  runtime_cycles_integration_test__runtime_cycle_detection.snap  tsconfig_paths_integration_test__tsconfig_paths_resolution.snap
crates/ftaql/tests/tests/fixtures/snapshots/: coupling_integration_test__main.ts@main.ts.snap
docs/: README.md
docs/configuration/: en.md  ru.md
docs/design/: en.md  ru.md
docs/node-cli/: en.md  ru.md
docs/overview/: en.md  ru.md
docs/rust-core/: en.md  ru.md
docs/scoring/: en.md  ru.md
docs/sqlite-output/: en.md  ru.md
docs/usage-patterns/: en.md  ru.md
docs/wasm/: en.md  ru.md
