[package]
name = "ftaql-wasm"
version = "1.0.2"
edition = "2021"
authors = ["Vasya Pikulev"]
license = "MIT"
description = "FtaQl WebAssembly bindings"
homepage = "https://github.com/pikulev/ftaql"
documentation = "https://github.com/pikulev/ftaql"
repository = "https://github.com/pikulev/ftaql"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ftaql = { path = "../ftaql", default-features = false, features = [] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"