[package]
name = "ftaql"
version = "1.0.2"
edition = "2021"
authors = ["Vasya Pikulev"]
license = "MIT"
description = "FtaQl static analysis engine for TypeScript and JavaScript"
homepage = "https://github.com/pikulev/ftaql"
documentation = "https://github.com/pikulev/ftaql"
repository = "https://github.com/pikulev/ftaql"
readme = "../../README.md"

[[bin]]
name = "ftaql"
path = "src/main.rs"
required-features = ["cli", "project-analysis"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
chrono = { version = "0.4.38", optional = true }
clap = { version = "4.5.38", features = ["derive"], optional = true }
crossbeam-channel = { version = "0.5.13", optional = true }
dashmap = { version = "5.5.3", optional = true }
env_logger = "0.11"
globset = "0.4"
ignore = { version = "0.4", optional = true }
log = "0.4"
rayon = "1.10.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.140"
swc_common = "14.0.3"
swc_ecma_ast = "15.0.0"
swc_ecma_parser = "24.0.3"
swc_ecma_visit = "21.0.0"
tempfile = "3.20.0"
path-clean = "1.0.1"
traversal = "0.1.2"
rspack_resolver = { version = "0.6.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
petgraph = "0.8.3"
indexmap = "2.10"
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

[features]
default = ["cli", "project-analysis"]
cli = ["dep:clap"]
project-analysis = [
    "dep:chrono",
    "dep:crossbeam-channel",
    "dep:dashmap",
    "dep:ignore",
    "dep:rspack_resolver",
    "dep:rusqlite",
    "dep:tokio",
]

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0"
predicates = "3.1.0"
insta = { version = "1.34.0", features = ["json", "redactions"] }
